2015-02-17  Andrew Burgess  <andrew.burgess@embecosm.com>

	* run-uclibc-tests.sh: Switch to arc-snps-linux-uclibc target
	triplet when looking for results.

2015-01-27  Andrew Burgess  <andrew.burgess@embecosm.com>

	* build-all.sh: Add tls command line flags, and set TLS_SUPPORT
	environment variable.
	* build-uclibc.sh: Check TLS_SUPPORT environment variable to
	control thread and tls support features.

2015-01-22  Andrew Burgess  <andrew.burgess@embecosm.com>

	* run-tests.sh: Remove typo from comment and help text.

2015-01-29  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* dejagnu/baseboards/arc-linux-generic.exp: Allow sysroot to be passed
	directly.

2015-01-22  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* arc-external.sh: Use different GMP link.

2015-01-16  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* dejagnu/basenoards/arc-sim-nsimdrv.exp: Allow custom nSIM options.

2014-12-19  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* dejagnu/baseboards/arc-sim-nsimdrv.exp: Update CPU C flags.
	* dejagnu/baseboards/arc600-sim.exp: Same.

2014-12-16  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* build-elf32.sh: Fix documentation build problem on RHEL6.
	* build-uclibc.sh: Same.

2014-12-12  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* README.md: Add git to prerequisites.

2014-12-08  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* arc-versions.sh: Change Linux version to 3.13.

2014-12-04  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* Synopsys_FOSS_Notices.pdf: New file.
	* build-all.sh: Copy legal notice to the install directory.

2014-12-01  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* extras/em_starter_kit/crt0.S: New file.
	* extras/em_starter_kit/em5d.lds: New file.
	* extras/em_starter_kit/em7d.lds: New file.

2014-12-01  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* README.md: Update reference to OpenOCD.

2014-11-21  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* README.md: Update for 2014.12 release.
